tests/errors/sem.inconsistent-sizes.inferred-array-item-counts.or
main :: () -> void {
    [!][!]sint.{.{1, 2}, .{3}};
};
